# AuthorizationStation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: config.py  db.py  deps.py  main.py  models.py  providers.py  redaction.py  schemas.py  security.py
cli/: main.py
docs/: authorization-requirements.md
k8s/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  pvc.yaml  rancher-deploy.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
